--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -20,11 +20,11 @@
     <td><%= user.salt %></td>
     <td><%= link_to 'Show', user %></td>
     <td><%= link_to 'Edit', edit_user_path(user) %></td>
-    <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+    <td><%= link_to 'Destroy', user, :confirm => 'Are you sure?', :method => :destroy %></td>
   </tr>
 <% end %>
 </table>
 
-<br />
+<br/>
 
 <%= link_to 'New User', new_user_path %>
