--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Pragprog Books Online Store</title>
-<%= stylesheet_link_tag "scaffold" %>
-<%= stylesheet_link_tag "depot", :media => "all" %> <%= javascript_include_tag :defaults %>
-<%= csrf_meta_tag %>
+  <title>Pragprog Books Online Store</title>
+  <%= stylesheet_link_tag "scaffold" %>
+  <%= stylesheet_link_tag "depot", :media => "all" %>
+  <%= javascript_include_tag :defaults %>
+  <%= csrf_meta_tag %>
 </head>
-<body id="store" > <div id="banner">
+<body id="store" >
+  <div id="banner">
     <%= image_tag("logo.png") %>
-    <%= @page_title || "Pragmatic Bookshelf" %>
-</div>
+    <%= @page_title || t('.title') %>
+  </div>
 <div id="columns">
 <div id="side">
     <div id="cart">
@@ -18,9 +20,18 @@
         <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
       <% end %>
     </div>
-<a href="http://www....">Home</a><br />
-<a href="http://www..../faq">Questions</a><br /> <a href="http://www..../news">News</a><br />
-<a href="http://www..../contact">Contact</a><br />
+  <a href="http://www...."> <%= t('.home') %></a><br />
+  <a href="http://www..../faq"><%= t('.questions') %> </a><br />
+  <a href="http://www..../news"><%= t('.news') %></a><br />
+  <a href="http://www..../contact"><%= t('.contact') %></a><br />
+  <% if session[:user_id] %>
+      <br />
+      <%= link_to 'Orders', orders_path %><br />
+      <%= link_to 'Products', products_path %><br />
+      <%= link_to 'Users', users_path %><br />
+      <br />
+      <%= button_to 'Logout', logout_path, :method => :delete %>
+  <% end %>
 </div>
 <div id="main">
 <%= yield %>
